# spendwise-tracker

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/commands/: lint.md  pr-description.md
.github/workflows/: build.yml  ci.yml  docs.yml
docs/: index.md  installation.md
expense_tracker/: app.py  version.py
expense_tracker/core/: model.py  models.py  repositories.py  repository.py
expense_tracker/gui/: main_window.py
expense_tracker/gui/dialogs/: add_expense.py  edit_expense.py  upload.py
expense_tracker/gui/tabs/: __init__.py  heatmap_tab.py  statistics_tab.py  transactions_tab.py
expense_tracker/services/: merchant.py  statistics.py
expense_tracker/utils/: extract.py  merchant.py  merchant_normalizer.py  migration.py  path.py
openspec/: project.md
openspec/changes/add-category-spending-chart/: proposal.md  tasks.md
openspec/changes/add-monthly-cashflow-chart/: proposal.md  tasks.md
openspec/changes/add-spending-heatmap/: design.md  tasks.md
openspec/changes/add-tabbed-interface/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-29-add-transaction-search/: proposal.md  tasks.md
openspec/changes/archive/2025-11-30-add-spending-heatmap/: design.md  proposal.md
openspec/changes/fix-database-location-for-package-install/: design.md  proposal.md  tasks.md
openspec/specs/statistics-metrics/: spec.md
openspec/specs/transaction-search/: spec.md
tests/: test_version.py
tests/core/: test_model.py  test_repository.py
tests/utils/: test_extract.py  test_merchant.py  test_migration.py  test_path.py
(+10 files in other folders)
