[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense_tracker"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "pdfplumber>=0.11.7",
    "rapidfuzz>=3.14.3",
    "ttkbootstrap>=1.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "docs"]

[tool.setuptools.dynamic]
version = {attr = "expense_tracker.version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
