[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spendwise-tracker"
description = "A personal expense tracker application with PDF receipt parsing and data visualization."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    "pdfplumber>=0.11.7",
    "rapidfuzz>=3.14.3",
    "ttkbootstrap>=1.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

docs = [
    "mkdocs-material",
]

[project.scripts]
expense-tracker = "expense_tracker.app:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "docs"]

[tool.setuptools.dynamic]
version = {attr = "expense_tracker.version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
